# ggnomics

./: LICENSE  README.md  mkdocs.yml  plotting.py  pyproject.toml
.github/workflows/: readme_plots.yml  tests.yml
docs/: generate_readme_plots.py  index.md  plots.md
examples/: 00_mock_data.py  01_reduced_dim.ipynb  01_reduced_dim.qmd  02_expression.ipynb  02_expression.qmd  03_coldata.qmd  04_heatmap.qmd  05_highest_exprs.qmd  06_pairs.qmd  07_abundance.ipynb  07_abundance.qmd  09_scatter_hierarchy.qmd  10_stats_plots.qmd  11_de_plots.qmd  12_pseudobulk.qmd  13_multimodal.ipynb  13_multimodal.qmd  14_repertoire.qmd  15_composition.qmd  16_significance_brackets.qmd  =0.6  =0.8  example_dataframe_plots.py
gg_singlecell/: __init__.py  composition.py  heatmap.py  plotting.py  qc.py  ridge.py  volcano.py
gg_singlecell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ggnomics/: __init__.py  _accessor.py  _compose.py  _utils.py  abundance.py  coldata.py  de_plots.py  dotplot.py  expression.py  highest_exprs.py  multimodal.py  pairs.py  palettes.py  pseudobulk.py  reduced_dim.py  repertoire.py  scatter.py  stats_plots.py  violin.py
ggnomics/bulk/: __init__.py  pca.py
ggnomics/pca/: __init__.py  methods.py  result.py
ggnomics/plotting/: __init__.py  utils.py
ggnomics/signif/: __init__.py  _brackets.py  _geom.py  _stats.py
ggnomics/singlecell/: __init__.py  pca.py  umap.py
tests/: conftest.py  test_abundance.py  test_accessor.py  test_coldata.py  test_compose.py  test_de_plots.py  test_expression.py  test_heatmap.py  test_highest_exprs.py  test_multimodal.py  test_pairs.py  test_plotting.py  test_pseudobulk.py  test_reduced_dim.py  test_repertoire.py  test_scatter.py  test_signif.py  test_stats_plots.py
