[project]
name = "ggnomics"
version = "0.1.0"
description = "Modular plotnine-based plotting utilities for single-cell and genomics"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["single-cell", "plotnine", "ggplot", "genomics", "biocpy"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "plotnine>=0.15",
  "anndata>=0.10",
]

[project.optional-dependencies]
sce = [
  "singlecellexperiment",
  "biocframe",
]
stats = ["scipy>=1.10", "statsmodels>=0.14"]
pseudobulk = ["scikit-learn>=1.3", "scipy>=1.10"]
multimodal = ["mudata>=0.2"]
repertoire = []
layout = []
upset = ["upsetplot>=0.8"]
all = [
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "mudata>=0.2",
  "upsetplot>=0.8",
  "singlecellexperiment",
  "biocframe",
]
dev = [
  "pytest",
  "quarto",
]
docs = [
  "mkdocs",
]

[project.urls]
Homepage = "https://github.com/yourname/ggnomics"

[tool.setuptools.packages.find]
where = ["."]
include = ["ggnomics*"]
